tests/ui/incomplete.rs
fn main() {
    docstr::docstr!(
        #
    );

    docstr::docstr!(
        #[]
    );

    docstr::docstr!(
        #[doc]
    );

    docstr::docstr!(
        #[doc = ]
    );
}
